app/stylesheets/_tabs.sass
.ui-tabs-hide
  display: none

.ui-tabs-panel
  height: 200px

.ui-tabs-nav
  background: $lightGray
  +clearfix
  li
    float: left
    a
      color: #333
      +sans
      font-size: 12px
      font-weight: bold
      line-height: inherit
      display: block
      padding: 8px 8px
      
  li.ui-state-active
    border-bottom: 0px
    background-color: $mediumGray
    a
      color: $offWhite

p.ui-widget-content, ul.ui-widget-content
  padding: 10px
  border: 1px solid $lightGray
  line-height: 140%
  color: #333    

.tabs
  border: none
  padding: 0

